[gd_scene load_steps=8 format=2]

[ext_resource path="res://Prefabs/Items/RedSword.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/crosshair.png" type="Texture" id=3]
[ext_resource path="res://HBoxes/Hitbox.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Stab"
length = 0.6
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.18, 0.26, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, -4 ), Vector2( -16, 0 ), Vector2( 20, 0 ), Vector2( -16, 0 ), Vector2( 12, -4 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.26 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "exit_stab"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.26, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -240.0, -90.0, -90.0, -240.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StabHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=2]
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, -4 ), Vector2( 20, 0 ), Vector2( 4, 8 ), Vector2( 12, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.45, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -240.0, -90.0, 0.0, -180.0, -240.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "exit_swing"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SlashHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 2.67681
height = 27.9797

[sub_resource type="CircleShape2D" id=4]
radius = 3.16228

[node name="Item" type="Node2D"]
position = Vector2( 0, -7 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 12, -4 )
rotation = -4.18879
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Stab = SubResource( 1 )
anims/Swing = SubResource( 2 )

[node name="SlashHitbox" parent="Sprite" instance=ExtResource( 4 )]
rotation = 1.5708
collision_mask = 8

[node name="CollisionShape2D" parent="Sprite/SlashHitbox" index="0"]
position = Vector2( 15.8333, 0 )
rotation = 1.57079
shape = SubResource( 3 )
disabled = true

[node name="StabHitbox" parent="Sprite" instance=ExtResource( 4 )]
collision_mask = 8
damage = 2

[node name="CollisionShape2D" parent="Sprite/StabHitbox" index="0"]
position = Vector2( -3.8147e-06, 29 )
shape = SubResource( 4 )
disabled = true

[node name="SwingMarker" type="Node2D" parent="."]
position = Vector2( 10, 0 )

[editable path="Sprite/SlashHitbox"]
[editable path="Sprite/StabHitbox"]
